ページネーション実装完了
CSSにてデザインも変更済み

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,9 +1,16 @@
 ja:
- activerecord:
-   attributes:
-     user:
-       nickname: ユーザー名
-     tweet:
-       title: タイトル
-       body: 本文
-       image: 画像
+  activerecord:
+    attributes:
+      user:
+        nickname: ユーザー名
+      tweet:
+        title: タイトル
+        body: 本文
+        image: 画像
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
